# ai-workflows

./: .cursorrules  .gitignore  Dockerfile  Makefile  README.md  SORA_EXTRACTION_GUIDE.md  SORA_EXTRACTION_REVERSE_ENGINEERING.md  docker-compose.prod.yml  pyproject.toml  start.sh
.github/workflows/: lint.yml  publish-types.yml
app/core/: deps.py
app/core/ai_models/: __init__.py  base.py  common.py  registry.py
app/core/ai_models/image/: __init__.py  common.py  hidream.py  nano_banana.py
app/core/ai_models/video/: __init__.py  kling.py  seedance.py
app/core/configs/: __init__.py  app.py  base_config.py
app/core/providers/: __init__.py
app/core/providers/litellm/: __init__.py  client.py  schemas.py
app/core/providers/replicate/: __init__.py  client.py  schemas.py
app/core/services/ffmpeg/: __init__.py  schemas.py  service.py
app/core/services/generation/: __init__.py  schemas.py
app/core/services/log/providers/structlog/: setup.py
app/core/services/prompt/: __init__.py  base_service.py  schemas.py  service.py
app/core/services/prompt/providers/: __init__.py
app/core/services/prompt/providers/openai/: __init__.py  service.py
app/core/services/sora_extraction/: __init__.py  api_client.py  browser_client.py  browser_debugger.py  client.py  downloader.py  service.py
app/core/services/storage/: __init__.py  base_service.py  schemas.py  service.py
app/core/services/storage/providers/: __init__.py
app/core/services/storage/providers/r2/: __init__.py  service.py
app/core/services/storage/providers/s3/: __init__.py  service.py
app/core/services/voice/: __init__.py  base_service.py  schemas.py  service.py
app/core/services/voice/providers/: __init__.py
app/core/services/voice/providers/cartesia/: __init__.py  service.py
app/core/services/voice/providers/elevenlabs/: __init__.py  service.py
app/core/tools/: __init__.py  base.py  registry.py
app/core/tools/gptmarket/: __init__.py  image_rewrite.py  pinterest.py  video_rewrite.py
app/temporal/: __init__.py  client.py  registry.py  schemas.py  worker.py
app/temporal/activities/: __init__.py  ffmpeg.py  image.py  llm.py  prompt.py  rewrite.py  sora_extraction.py  storage.py  tools.py  video.py  voice.py
app/temporal/workflows/: __init__.py  base.py  hello_world.py  sora_download.py
app/temporal/workflows/generations/: __init__.py  ruby.py  slideshows_pinterest.py
docs/: DEPLOYMENT.md  INTEGRATION_EXAMPLE.md  NEXTJS_INTEGRATION.md  README.md  SORA_EXTRACTION.md
scripts/: __init__.py  debug_sora_api.py  debug_sora_encodings.py  debug_sora_full.py  debug_sora_network.py  debug_sora_page_data.py  download_sora.py  extract_sora.py  extract_sora_nowm.py  extract_sora_v2.py  extract_sora_v3.py  test_connection.py
scripts/generate_types/: __init__.py  __main__.py  discovery.py  typescript.py
scripts/generate_types/templates/: __init__.py  server.ts
tests/: conftest.py  test_sora_extraction.py
tests/core/unit/services/ffmpeg/: test_combine_audio.py  test_escaping.py  test_factory.py  test_fonts.py  test_integration.py  test_slow_down.py  test_text_overlay.py  test_text_wrapping.py
tests/core/unit/services/storage/: test_r2_upload.py
tests/temporal/: __init__.py  test_activities.py  test_workflows.py
tests/temporal/manual/: __init__.py  test_ruby.py  test_slideshows_pinterest.py
